--- a/html/index.html
+++ b/html/index.html
@@ -22,12 +22,20 @@
 				<div class="col-sm-6" id="highlight-text" align="right"><font size="4"; color="white">Contact  |   Login  | Sign Up</font></div>
 
 			</div>
-<br />
-<br />
-<br />
-<br />
-			<div class="nav navbar-default" style="margin-bottom: 0px;">
-				Navbar items
+		<br />
+		<br />
+		<br />
+		<br />
+		<div class="nav navbar-default" align="right" style="margin-bottom: 0px; height: 40px">
+			<div class="container-fluid">
+
+			    <ul class="nav navbar-nav">
+			      <li class="active"><a href="#">Home</a></li>
+			      <li><a href="#">Find Caretaker</a></li>
+			      <li><a href="#">Find a Job</a></li>
+			      <li><a href="#">How it works</a></li>
+			    </ul>
+ 			</div>
 			</div>
 		</div>
 	<div class="container">
