--- a/html/index.html
+++ b/html/index.html
@@ -16,29 +16,113 @@
 	<script src="bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-		<div class="header" style="height: 150px; background-color: grey;">
-			<div class="row">
-				<div class="col-sm-6" id="highlight-text"><font size="6"; color="green">EazyHelp</font></div>
-				<div class="col-sm-6" id="highlight-text" align="right"><font size="4"; color="white">Contact  |   Login  | Sign Up</font></div>
+<!-- 	<header id = "header">
+		<div>
+			<h1>EazyHelp</h1>
 
-			</div>
-		<br />
-		<br />
-		<br />
-		<br />
-		<div class="nav navbar-default" align="right" style="margin-bottom: 0px; height: 40px">
-			<div class="container-fluid">
-
-			    <ul class="nav navbar-nav">
-			      <li class="active"><a href="#">Home</a></li>
-			      <li><a href="#">Find Caretaker</a></li>
-			      <li><a href="#">Find a Job</a></li>
-			      <li><a href="#">How it works</a></li>
-			    </ul>
- 			</div>
-			</div>
 		</div>
-	<div class="container">
-	</div>
+		<nav id = "topnav">
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Find Caretaker</a></li>
+				<li><a href="#">How it works </a></li>
+			</ul>
+		</nav>
+	</header> -->
+	<section>
+		<div class="header">
+			<div class="top_header">
+				<div class="col-sm-6" id="highlight-text"><font size="6"; color="green">EazyHelp</font></div>
+				<div class="col-sm-6" id="highlight-text" align="right">
+					<ul class = "nav navbar-right navbar-nav">
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">Login</a></li>
+					</ul>
+					<button class = "btn btn-success navbar-btn">Register</button>
+				</div>
+
+
+			</div>
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<div class = "navbar navbar-default" role = "navigation">
+					<div id="nav-right" class = "navbar-header">
+						<ul class = "nav navbar-right navbar-nav">
+							<li><a href="#">Home</a></li>
+							<li><a href="#">Find Caretaker</a></li>
+							<li><a href="#">Find a Job</a></li>
+							<li><a href="#">How it works?</a></li>
+						</ul>
+					</div>
+			</div>
+
+		</div>
+	</section>
+	<div id="cardbox" class="container">
+		<div class = "row">
+			<div class = "col-sm-6" id="box">
+<!-- 				<div class="card card-1">
+					<div class="img-fluid">
+						<div class="card-img-top" src="https://snap-photos.s3.amazonaws.com/img-thumbs/960w/1U2EGZ07GU.jpg" alt="Find Caretaker" style="width:100%">
+							<div class = "card-img-overlay" style="opacity:1.0">
+								<h4 class="card-title">Find a caretaker</h4>
+								<button class="btn btn-success btn-rounded btn-md">Get Started</a></button>
+							</div>
+						</div>
+					</div>
+				</div> -->
+				<div class="polaroid mx-auto">
+					<div class="card img-fluid" style= "width:420px">
+						<img class="card-img-top" src="../images/findcaretaker_edited.jpg" alt="Card image" style="width:100%" height: 110%>
+					<div class = "card-img-overlay">
+						<h3 class="card-title">Find a caretaker</h3>
+						<button class="btn btn-success btn-rounded btn-md">Get Started</a></button>
+					</div>
+					</div>
+				</div>
+				<br />
+				<br />
+				<br />
+				<h2> What are our careseekers saying</h2>
+			</div>
+			<div class = "col-sm-6">
+				<div class="polaroid">
+					<div class="card img-fluid" style= "width:420px">
+						<img class="card-img-top" src="../images/findcare.jpg" alt="Card image" style="width:100%">
+					<div class = "card-img-overlay">
+						<h3 class="card-title">Find a Job</h3>
+						<button class="btn btn-success btn-rounded btn-md">Get Started</a></button>
+					</div>
+					</div>
+				</div>
+				<br />
+				<br />
+				<br />
+				<h2>What are our caregivers saying</h2>
+			</div>
+			
+    </div>
+			<!-- <div class = "col-sm-6">
+				
+				
+				<div class = "container">
+					<div class="card img-fluid" style= "width:500px">
+						<img class="card-img-top" src="" alt="Card image" style="width:100%">
+					<div class = "card-img-overlay">
+						<h4 class="card-title">Find a caretaker</h4>
+						<button class="btn btn-success btn-rounded btn-md">Get Started</a></button>
+					</div>
+					</div>
+				</div>
+			</div>
+			<div class = "col-sm-6">
+				dasdf
+			</div> -->
+<!-- 		</div>
+	</div> -->
 </body>
 </html>
