--- a/html/index.html
+++ b/html/index.html
@@ -151,41 +151,145 @@
                 <li class="active">Personal Details</li>
                 <li>Social Profiles</li>
                 <li>Account Setup</li>
+                <li>Time</li>
+                <li>Experience</li>
+                <li>Must Have</li>
             </ul>
             <!-- fieldsets -->
             <fieldset>
-                <h2 class="fs-title">Personal Details</h2>
-                <h3 class="fs-subtitle">Tell us something more about you</h3>
+                <h2 class="fs-title">What do you need care for?</h2>
+                <!-- <h3 class="fs-subtitle">Tell us something more about you</h3> -->
 <!--                 <input type="text" name="fname" placeholder="First Name"/>
                 <input type="text" name="lname" placeholder="Last Name"/>
                 <input type="text" name="phone" placeholder="Phone"/>
                 -->
                 <div class="container">
                 <div class="row">
-                <div class="col-md-3 button-circle"><label class="btn btn-danger"><img class="img-circle img-thumbnail img-check" src="../images/findcaretaker_edited.jpg" alt="nanny" height="200" width="200"><input type="radio" name="nanny" id="nanny" value="nanny" class="hidden" autocomplete="off"></label></div>
-                <div class="col-md-3"><img class="img-circle" src="../images/findcaretaker_edited.jpg" alt="nanny" height="200" width="200"></div>
-                <div class="col-md-3"><img class="img-circle" src="../images/findcaretaker_edited.jpg" alt="nanny" height="200" width="200"></div>
-                <div class="col-md-3"><img class="img-circle" src="../images/findcaretaker_edited.jpg" alt="nanny" height="200" width="200"></div>
+                <div class="col-md-3 button-circle"><label class="btn btn-danger"><img class="img-circle img-thumbnail img-check" src="../images/neonatal2.png" alt="nanny" height="200" width="200"><input type="radio" name="neonatal" id="neonatal" value="neonatal" class="hidden" autocomplete="off"></label>
+                	<h4>Find neonatal care</h4>
+                </div>
+                <div class="col-md-3 button-circle"><label class="btn btn-danger"><img class="img-circle img-thumbnail img-check" src="../images/nanny.png" alt="nanny" height="200" width="200"><input type="radio" name="nanny" id="nanny" value="nanny" class="hidden" autocomplete="off"></label>
+                	<h4>Find Nanny</h4>
+                </div>
+                <div class="col-md-3 button-circle"><label class="btn btn-danger"><img class="img-circle img-thumbnail img-check" src="../images/housemaid.png" alt="nanny" height="200" width="200"><input type="radio" name="housemaid" id="housemaid" value="housemaid" class="hidden" autocomplete="off"></label>
+                	<h4>Find Housemaid</h4>
+                </div>
+                <div class="col-md-3 button-circle"><label class="btn btn-danger"><img class="img-circle img-thumbnail img-check" src="../images/pet.png" alt="nanny" height="200" width="200"><input type="radio" name="pet" id="pet" value="pet" class="hidden" autocomplete="off"></label>
+                	<h4>Find Petcare</h4>
+                </div>
             	</div>
             </div>
                 <input type="button" name="next" class="next action-button" value="Next"/> 
             </fieldset>
 
             <fieldset>
-                <h2 class="fs-title">Social Profiles</h2>
-                <h3 class="fs-subtitle">Your presence on the social network</h3>
-                <input type="text" name="twitter" placeholder="Twitter"/>
+                <h2 class="fs-title">When are you expecting your child?</h2>
+                <h3 class="fs-subtitle">You can either enter the date or the time by which you wish to find your caretaker.</h3>
+<!--                 <input type="text" name="twitter" placeholder="Twitter"/>
                 <input type="text" name="facebook" placeholder="Facebook"/>
-                <input type="text" name="gplus" placeholder="Google Plus"/>
+                <input type="text" name="gplus" placeholder="Google Plus"/> -->
+                <div class="container">
+	                <div class="row">
+		                <div class="col-md-3"><label class="btn btn-danger"><img class="img-thumbnail img-check" src="../images/calendar.png" alt="nanny" height="200" width="200"><input type="radio" name="neonatal" id="neonatal" value="neonatal" class="hidden" autocomplete="off"></label>
+		                	<h4>As soon as possible</h4>
+		                </div>
+		                <div class="col-md-3"><label class="btn btn-danger"><img class="img-thumbnail img-check" src="../images/calendar.png" alt="nanny" height="200" width="200"><input type="radio" name="nanny" id="nanny" value="nanny" class="hidden" autocomplete="off"></label>
+		                	<h4>Within a week or two</h4>
+		                </div>
+		                <div class="col-md-3"><label class="btn btn-danger"><img class="img-thumbnail img-check" src="../images/calendar.png" alt="nanny" height="200" width="200"><input type="radio" name="housemaid" id="housemaid" value="housemaid" class="hidden" autocomplete="off"></label>
+		                	<h4>Within a month</h4>
+		                </div>
+		                <div class="col-md-3"><label class="btn btn-danger"><img class="img-thumbnail img-check" src="../images/calendar.png" alt="nanny" height="200" width="200"><input type="radio" name="pet" id="pet" value="pet" class="hidden" autocomplete="off"></label>
+		                	<h4>Just Browsing</h4>
+		                </div>
+	            	</div>
+            	</div>
+                <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
+                <input type="button" name="next" class="next action-button" value="Next"/>
+            </fieldset>
+
+            <fieldset>
+                <h2 class="fs-title">Where do you need help?</h2>
+                <h3 class="fs-subtitle">Select your address so that you can find a caretaker near to you.</h3>
+                 <div class="form-group col-md-6">
+				    <label for="inputState">State</label>
+				    <select id="inputState" class="form-control">
+				    	<option selected>-- Select city --</option>
+				        <option>Bhaktapur</option>
+				        <option>Kathmandu</option>
+				        <option>Lalitpur</option>
+				    </select>
+			    </div>
+			    <div class="form-group col-md-6">
+				    <label for="inputState">Tole</label>
+				    <select id="inputState" class="form-control">
+				    	<option selected>-- Select Tole --</option>
+				    	<option>Baneshwor</option>
+				    	<option>Basantapur</option>
+				    	<option>Basundhara</option>
+				        <option>Samakhusi</option>
+				        <option>Sitapaila</option>
+				        <option>Sukedhara</option>
+				        <option>Sundhara</option>
+				    </select>
+			    </div>
                 <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
                 <input type="button" name="next" class="next action-button" value="Next"/>
             </fieldset>
             <fieldset>
-                <h2 class="fs-title">Create your account</h2>
-                <h3 class="fs-subtitle">Fill in your credentials</h3>
+                <h2 class="fs-title">What hours a day do you need a caretaker?</h2>
+
+				<div class="row">
+                <div class="col-md-4"><input type="radio"><label class="form-check-label radio-inline"> Office hours (9-6pm)</label></div>
+                <div class="col-md-4"><input type="radio"><label class="form-check-label radio-inline"> After school</label></div>
+                <div class="col-md-4"><input type="radio"><label class="form-check-label radio-inline"> Full time</label></div>
+            	</div>
+                <br />
+
+                <h2 class="fs-title">How long would you need a caretaker?</h2>
+                <div class="row">
+                <div class="col-md-3"><input type="radio"><label class="form-check-label radio-inline"> 1 month</label></div>
+                <div class="col-md-3"><input type="radio"><label class="form-check-label radio-inline"> 1-6 months</label></div>
+                <div class="col-md-3"><input type="radio"><label class="form-check-label radio-inline"> >6 months</label></div>
+                <div class="col-md-3"><input type="radio"><label class="form-check-label radio-inline"> Not sure</label></div>
+            	</div>
+                <br />
+                <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
+                <input type="button" name="next" class="next action-button" value="Next"/>
+            </fieldset>
+            <fieldset>
+                <h2 class="fs-title">Minimum years of experience</h2>
+                <div class="row">
+                <div class="col-md-4"><input type="radio"><label class="form-check-label radio-inline"> Any</label></div>
+                <div class="col-md-4"><input type="radio"><label class="form-check-label radio-inline"> At least 1 year</label></div>
+                <div class="col-md-4"><input type="radio"><label class="form-check-label radio-inline"> >At least 3 years</label></div>
+            	</div>
+                <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
+                <input type="button" name="next" class="next action-button" value="Next"/>
+            </fieldset>
+<!--             <fieldset>
+                <h2 class="fs-title">How long would you need a caretaker?</h2>
+                <h3 class="fs-subtitle">It depends on whether you wish to have a caretaker during the infancy of your newborn or wish to have a caretaker for long run.</h3>
                 <input type="text" name="email" placeholder="Email"/>
                 <input type="password" name="pass" placeholder="Password"/>
                 <input type="password" name="cpass" placeholder="Confirm Password"/>
+                <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
+                <input type="button" name="next" class="next action-button" value="Next"/>
+            </fieldset> -->
+            <fieldset>
+                <h2 class="fs-title">Must haves for your caretaker</h2>
+                <div class="row">
+                <div class="col-md-4"><input type="checkbox"><label class="form-check-label checkbox-inline">First Aid Training</label></div>
+                <div class="col-md-4"><input type="checkbox"><label class="form-check-label checkbox-inline">Neonatal care</label></div>
+                <div class="col-md-4"><input type="checkbox"><label class="form-check-label checkbox-inline">Comfortable with pets</label></div>
+            	</div>
+            	<br />
+            	<div class="row">
+                <div class="col-md-6"><input type="checkbox"><label class="form-check-label checkbox-inline">Willing to live in your home</label></div>
+                <div class="col-md-6"><input type="checkbox"><label class="form-check-label checkbox-inline">At least +2 passed</label></div>
+            	</div>
+            	<br />
+
                 <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
                 <input type="submit" id="submit" name="submit" class="submit action-button" value="Submit"/>
             </fieldset>
@@ -198,80 +302,9 @@
 	</div>
 
 		<div id="findcare" class="tab-pane fade">
-		<div class="row">
-        <div class="table-responsive container">
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                    </tr>
-                </thead>
- 
-                <tbody>
-                    <tr class="text-center">
-                        <td>Caretakers</td>
-                        <td ><img class="img-circle" src="images/list.png" width="150" height="150"><br /><br /><figcaption>Jasmine Shah</figcaption></td>
-                        <td><img class="img-circle" src="images/list.png" width="150" height="150"><br /><br /><figcaption>Anamika Singh</figcaption></td>
-                        <td><img class="img-circle" src="images/list.png" width="150" height="150"><br /><br /><figcaption>Sukriti Pandey</figcaption></td>
-                    </tr>
- 
-                    <tr class="text-center">
-                        <td>Rating</td>
-                        <td><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star"></i></td>
-                        <td><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></td>
-                        <td><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star checked"></i><i class="fa fa-star"></i></td>
-                    </tr>
- 
-                    <tr class="text-center">
-                        <td>Experience</td>
-                        <td>3 years</td>
-                        <td>5 years</td>
-                        <td>2 years</td>
-                    </tr>
- 
-                    <tr class="text-center">
-                        <td>Expected Salary</td>
-                        <td>15K - 20K</td>
-                        <td>20K - 23K</td>
-                        <td>15K</td>
-                    </tr>
- 
-                    <tr class="text-center">
-                        <td>Trainings</td>
-                        <td><li>Neonatal Care</li><li>Child Care</li></td>
-                        <td><li>Neonatal Care</li><li>Child Care Specialist</li><li>Special Needs Trainings</li></td>
-                        <td><li>Special Needs</li><li>Child Care</li></td>
-                    </tr>
- 
-                    <tr class="text-center">
-                        <td>Cooking</td>
-                        <td><button class="btn btn-success">Yes</button></td>
-                        <td><button class="btn btn-danger">No</button></td>
-                        <td><button class="btn btn-success">Yes</button></td>
-                    </tr>
- 
-                    <tr class="text-center">
-                        <td>Job Type</td>
-                        <td>Full Time</td>
-                        <td>Full Time</td>
-                        <td>Part Time</td>
-                    </tr>
- 
-                    <tr>
-                        <td class="text-center">Reviews</td>
-                        <td id="reviews"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et ullamcorper tellus, nec interdum lectus. Vestibulum posuere imperdiet mi, ac vehicula metus fermentum in. Nam iaculis quis leo vel finibus. Proin egestas neque justo, in fringilla mauris congue ut. Aenean pellentesque gravida dapibus. Aliquam tempus massa vitae est tincidunt volutpat. Aliquam scelerisque lorem odio, et tristique libero lobortis non. Quisque suscipit eu tortor gravida volutpat. Morbi pulvinar ligula in congue eleifend. Curabitur scelerisque libero dui, et ornare turpis consequat in. Morbi ultricies aliquam massa. Curabitur interdum metus sed tortor dignissim maximus. Mauris condimentum magna eget justo dictum, sed posuere libero tristique. Aliquam elit ipsum, semper ac aliquet sed, laoreet quis nisi.</p></td>
-                        <td id="reviews"><p>Pellentesque tempor iaculis risus, ut blandit diam viverra tempor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin vestibulum sagittis nisi pretium vestibulum. Etiam egestas odio vitae scelerisque mollis. Morbi lacinia leo feugiat, tristique odio et, mattis felis. Sed orci sapien, porttitor vel varius ut, suscipit ut ipsum. Sed et libero fringilla, venenatis lectus tempus, ornare libero. Vivamus id accumsan metus. Aenean imperdiet magna lorem, in malesuada lectus convallis eget. Morbi dictum vel urna et aliquam. Vivamus a nulla bibendum, aliquet felis sed, efficitur ante.</p></td>
-                        <td id="reviews"><p>Integer scelerisque arcu diam, in scelerisque eros euismod id. Etiam consectetur, massa quis euismod hendrerit, lorem augue venenatis diam, id tristique sapien erat vitae diam. Proin vitae auctor elit, ut fringilla arcu. Vivamus et feugiat nisl, a vestibulum nibh. Sed dignissim, dui sed imperdiet eleifend, erat nisl pharetra urna, et consectetur felis sapien eu ante. Aliquam metus arcu, sagittis sed semper vitae, dapibus non metus. Vestibulum condimentum ac velit at suscipit.</p></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+			<iframe src="profile.html" width="100%" height="810"></iframe>
 
-</div>
+		</div>
 
 	</div>
 </body>
